--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,35 +1,34 @@
-name: Build APK
+name: Build Android APK
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.10
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.10
 
-      - name: Install dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y libffi-dev libssl-dev build-essential python3-pip zip unzip openjdk-17-jdk
-          python3 -m pip install --upgrade pip setuptools wheel
-          pip install buildozer cython
+    - name: Install dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y python3-pip build-essential git zip unzip openjdk-17-jdk
+        pip install --upgrade pip
+        pip install buildozer cython
 
-      - name: Build APK
-        run: |
-          buildozer -v android debug
+    - name: Build APK
+      run: |
+        buildozer android debug
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: ytdownloader-apk
-          path: bin/*.apk
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: kivy-apk
+        path: bin/*.apk
