--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         python-version: "3.10"
 
-    - name: Install dependencies
+    - name: Install system dependencies
       run: |
         sudo apt update
         sudo apt install -y python3-pip build-essential git zip unzip openjdk-17-jdk
@@ -24,9 +24,23 @@ jobs:
         pip install --user buildozer cython
         echo "$HOME/.local/bin" >> $GITHUB_PATH
 
+    - name: Install Android SDK & NDK
+      run: |
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip -d cmdline-tools
+        mkdir -p ~/android-sdk/cmdline-tools/latest
+        mv cmdline-tools/* ~/android-sdk/cmdline-tools/latest/
+        rm -rf cmdline-tools cmdline-tools.zip
+        echo "export ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
+        echo "export PATH=$PATH:$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_ENV
+        yes | sdkmanager --licenses
+        sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.0" "ndk;25.1.8937393"
+
     - name: Build APK
       run: |
-        buildozer android debug
+        buildozer init
+        sed -i 's/#android.ndk_path =/android.ndk_path = ~\/android-sdk\/ndk\/25.1.8937393/' buildozer.spec
+        buildozer -v android debug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
