--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,12 +26,15 @@ jobs:
 
     - name: Install Android SDK & NDK
       run: |
-        # Install cmdline-tools
+        # Create SDK directory
+        mkdir -p ~/android-sdk
+        
+        # Download and extract command line tools
         wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-        mkdir -p ~/android-sdk/cmdline-tools
-        unzip cmdline-tools.zip -d ~/android-sdk/cmdline-tools
-        mv ~/android-sdk/cmdline-tools/cmdline-tools ~/android-sdk/cmdline-tools/latest
-        rm cmdline-tools.zip
+        unzip cmdline-tools.zip -d cmdline-tools
+        mkdir -p ~/android-sdk/cmdline-tools/latest
+        mv cmdline-tools/* ~/android-sdk/cmdline-tools/latest/
+        rm -rf cmdline-tools cmdline-tools.zip
         
         # Set environment variables
         echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
