--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,62 +14,31 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: 3.10
 
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
         sudo apt update
         sudo apt install -y python3-pip build-essential git zip unzip openjdk-17-jdk
         pip install --upgrade pip
-        pip install --user buildozer cython
-        echo "$HOME/.local/bin" >> $GITHUB_PATH
+        pip install buildozer cython
 
-    - name: Install Android SDK & NDK
+    - name: Install Android SDK and NDK
       run: |
-        # Create Android SDK directory
-        mkdir -p ~/android-sdk
-        
-        # Download and extract command line tools to CORRECT location
-        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-        mkdir -p ~/android-sdk/cmdline-tools
-        unzip cmdline-tools.zip -d ~/android-sdk/cmdline-tools
-        mv ~/android-sdk/cmdline-tools/cmdline-tools ~/android-sdk/cmdline-tools/latest
-        rm cmdline-tools.zip
-        
-        # Verify directory structure
-        echo "Directory structure:"
-        ls -la ~/android-sdk/cmdline-tools/latest/bin/
-        
-        # Set environment variables
-        echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
-        echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
-        echo "PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
-        
-        # Check PATH
-        echo "Current PATH: $PATH"
-        
-        # Verify sdkmanager exists
-        echo "sdkmanager path:"
-        which sdkmanager || true
-        ls -la $(which sdkmanager) || true
-        
-        # Accept licenses (with proper path)
-        yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-        
-        # Install components (with proper path)
-        $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-33" "build-tools;34.0.0" "ndk;25.1.8937393"
-        
-        # Verify installations
-        echo "Installed components:"
-        ls -la ~/android-sdk/build-tools/34.0.0/
-        ls -la ~/android-sdk/ndk/25.1.8937393/
+        wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O cmdline-tools.zip
+        mkdir -p ${HOME}/android-sdk/cmdline-tools
+        unzip cmdline-tools.zip -d ${HOME}/android-sdk/cmdline-tools
+        mv ${HOME}/android-sdk/cmdline-tools/cmdline-tools ${HOME}/android-sdk/cmdline-tools/latest
+        yes | ${HOME}/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=${HOME}/android-sdk "platform-tools" "platforms;android-33" "build-tools;34.0.0" "ndk;25.1.8937393"
+        echo "export PATH=${HOME}/android-sdk/platform-tools:${PATH}" >> $GITHUB_ENV
+        echo "export ANDROID_SDK_ROOT=${HOME}/android-sdk" >> $GITHUB_ENV
 
     - name: Build APK
       run: |
-        buildozer -v android debug
+        buildozer android debug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: ytdownloader-apk
+        name: kivy-apk
         path: bin/*.apk
